--- a/fc/public/css/burichan.css
+++ b/fc/public/css/burichan.css
@@ -1,17 +1,17 @@
 ﻿body { margin: 0; padding: 8px; margin-bottom: auto; }
 blockquote blockquote { margin-left: 0em }
-form { 
+form {
 margin-bottom: 0px }
 .postarea { text-align: center }
 .postarea table { margin: 0px auto; text-align: left }
-.thumb { 
+.thumb {
 border: none; float: left; margin: 2px 20px }
-.nothumb { float: left; background: #eee; border: 2px dashed #aaa; 
+.nothumb { float: left; background: #eee; border: 2px dashed #aaa;
 text-align: center; margin: 2px 20px; padding: 1em 0.5em 1em 0.5em; }
-.reply blockquote, blockquote :last-child { 
+.reply blockquote, blockquote :last-child {
 margin-bottom: 0em }
 .reflink a { color: inherit; text-decoration: none }
-.reply .filesize { margin-left: 20px } 
+.reply .filesize { margin-left: 20px }
 .userdelete { float: right; text-align: center; white-space: nowrap }
 .replypage .replylink { display: none }
 html, body {
@@ -24,7 +24,7 @@ a {
         color:#34345C;
         text-decoration:none;
         font-family:sans-serif;
-	font-size:10pt;
+  font-size:10pt;
 }
 a:visited {
         background:inherit;
@@ -39,7 +39,7 @@ a:hover {
         text-decoration:underline;
         font-family:sans-serif;
 }
-div.delete { 
+div.delete {
 }
 .adminbar {
         text-align:right;
@@ -77,39 +77,39 @@ div.delete {
        text-align:center;
         font-size:10px;
         font-family:sans-serif;
-	clear: both;
-	padding-top: 10px;
+  clear: both;
+  padding-top: 10px;
 }
 .footer a {
-	font-size:10px;
+  font-size:10px;
 }
 .dellist {
-	background:inherit;
-	text-align:center;
+  background:inherit;
+  text-align:center;
 }
 .delbuttons {
-	background:inherit;
-	text-align:center;
-	padding-bottom:4px;
+  background:inherit;
+  text-align:center;
+  padding-bottom:4px;
 }
 .managehead {
-	background:#0F8FE1;
-	color:#000000;
-	font-family:sans-serif;
-	font-size:14px;
-	padding:0px;
+  background:#0F8FE1;
+  color:#000000;
+  font-family:sans-serif;
+  font-size:14px;
+  padding:0px;
 }
 .postlists {
-	background:#FFFFFF;
-	width:100%;
-	padding:0px;
-	color:#000000;
+  background:#FFFFFF;
+  width:100%;
+  padding:0px;
+  color:#000000;
 }
 .row1 {
-	background:#9AD2F6;
-	font-family:sans-serif;
-	font-size:12px;
-	color:#000000;
+  background:#9AD2F6;
+  font-family:sans-serif;
+  font-size:12px;
+  color:#000000;
 }
 .row2 {
         background:#FFFFFF;
@@ -118,37 +118,37 @@ div.delete {
         color:#000000;
 }
 .unkfunc {
-	background:#C4C2EE;
-	color:#FFFFFF;
+  background:#C4C2EE;
+  color:#FFFFFF;
 }
 .reflink {
 }
 .filesize {
-	font-size:12px;
-	font-family:sans-serif;
-	text-decoration:underline;
-	padding-left:3em;
+  font-size:12px;
+  font-family:sans-serif;
+  text-decoration:underline;
+  padding-left:3em;
 }
 .filetitle {
-	background:inherit;
-	font-size:18px;
-	font-family:serif;
-	color:#0F0C5D;
-	font-weight:800;
+  background:inherit;
+  font-size:18px;
+  font-family:serif;
+  color:#0F0C5D;
+  font-weight:800;
 }
 .postername {
-	/*
-	background:inherit;
-	font-size:15px;
-	font-family:serif;
-	color:#117743;
-	font-weight:800;
-	*/
+  /*
+  background:inherit;
+  font-size:15px;
+  font-family:serif;
+  color:#117743;
+  font-weight:800;
+  */
 }
 .postertrip {
-	/*
-	color:#228854;
-	*/
+  /*
+  color:#228854;
+  */
 }
 .oldpost, .notabene {
         background:inherit;
@@ -165,21 +165,21 @@ div.delete {
         font-weight:800;
 }
 .reply {
-	background:#D6DAF0;
-	color:#000000;
-	font-family:serif;
+  background:#D6DAF0;
+  color:#000000;
+  font-family:serif;
 }
 blockquote {
-	margin: .5em .5em .5em 1em;
+  margin: .5em .5em .5em 1em;
 }
 
 .reply blockquote {
-	margin: .5em;
+  margin: .5em;
 }
 .doubledash {
- 	vertical-align:top;
-	clear:both;
-	float:left;
+   vertical-align:top;
+  clear:both;
+  float:left;
 }
 .replytitle {
         background:inherit;
@@ -189,7 +189,7 @@ blockquote {
         font-weight:800;
 }
 .commentpostername {
-	/*
+  /*
         background:inherit;
         font-size:15px;
         font-family:serif;
@@ -198,49 +198,49 @@ blockquote {
 */
 }
 .thumbnailmsg {
-	background:inherit;
-	font-size:9px;
-	font-family:sans-serif;
-	color:#000000;
+  background:inherit;
+  font-size:9px;
+  font-family:sans-serif;
+  color:#000000;
 }
 hr {
-	border-style: solid none none none;
-	border-width: 1px;
-	border-color: #BBBBBB;
+  border-style: solid none none none;
+  border-width: 1px;
+  border-color: #BBBBBB;
 }
 table {
-	border-style: none;
+  border-style: none;
 }
 table td {
-	border-style: none;
+  border-style: none;
 }
 .nothumb {
-	background-color: #FFFFFF;
-	border-style: dotted;
-	margin: .3em .5em;
+  background-color: #FFFFFF;
+  border-style: dotted;
+  margin: .3em .5em;
 }
 .abbrev {
         color:#707070;
 }
 .highlight {
-	background:background:#D6DAF0;
-	border: 2px dashed #34345C;
+  background:background:#D6DAF0;
+  border: 2px dashed #34345C;
 }
 dl.menu dt {
-	background:#DDDDDD;
-	border: solid 1px #CCCCCC;
-	margin-top: 1em;
-	padding-left: .5em;
-	cursor: pointer;
-	
+  background:#DDDDDD;
+  border: solid 1px #CCCCCC;
+  margin-top: 1em;
+  padding-left: .5em;
+  cursor: pointer;
+
 }
 dl.menu dd {
-	margin-left: .5em;
-	padding-left: .5em;
-	border-left: solid 1px #CCCCCC;
+  margin-left: .5em;
+  padding-left: .5em;
+  border-left: solid 1px #CCCCCC;
 }
 dl.menu dd.hidden {
-	display: none;
+  display: none;
 }
 .signature {
         background: #00FF00;
@@ -265,12 +265,12 @@ dl.menu dd.hidden {
 }
 
 .postbody blockquote {
-	background:#C4C2EE;
-	color:#FFFFFF;
+  background:#C4C2EE;
+  color:#FFFFFF;
 }
 .postbody blockquote blockquote{
-	background:#C4C2EE;
-	color:#FFFFFF;
+  background:#C4C2EE;
+  color:#FFFFFF;
 }
 .postbody blockquote blockquote blockquote{
         color:#204010;
@@ -278,32 +278,32 @@ dl.menu dd.hidden {
 background:#C4C2EE;
 }
 .spoiler {
-	background: #C4C2EE;
-	color: #C4C2EE;
+  background: #C4C2EE;
+  color: #C4C2EE;
 }
 .spoiler blockquote{
-	background: #C4C2EE; !important;
-	color: #C4C2EE; !important;
+  background: #C4C2EE; !important;
+  color: #C4C2EE; !important;
 }
 .spoiler:hover {
-	background: #C4C2EE;
-	color: #000000;
+  background: #C4C2EE;
+  color: #000000;
 }
 .spoiler:hover blockquote{
-	color:#789922 !important;
+  color:#789922 !important;
 }
 .spoiler blockquote:hover {
-	color:#789922 !important;
+  color:#789922 !important;
 }
 .errorMessage{
-	background:#EEaaaa;
-	text-align:center;
-	padding:2px;
-	color:#880000;
-	clear: both;
-	font-weight: bold;
-	margin-bottom: .5em;
-	border: solid 1px #117743;
+  background:#EEaaaa;
+  text-align:center;
+  padding:2px;
+  color:#880000;
+  clear: both;
+  font-weight: bold;
+  margin-bottom: .5em;
+  border: solid 1px #117743;
 }
 .adminMenu{
 vertical-align:top;
@@ -318,13 +318,13 @@ background:#D6DAF0;
 }
 
 .postername, .postertrip, .commentpostername {
-	display: inline; visibility: visible; font-weight: bold; color: #339;
+  display: inline; visibility: visible; font-weight: bold; color: #339;
 }
 .postertrip {
-	color: #993;
+  color: #993;
 }
 .hidden-thread {
-	color: #666; padding: 5px 0 0 28px; min-height: 24px; vertical-align: middle; background: url('images/hidden.png') no-repeat left center;
+  color: #666; padding: 5px 0 0 28px; min-height: 24px; vertical-align: middle; background: url('images/hidden.png') no-repeat left center;
 }
 form > div + br[clear="left"] {
 display: block; height: 1px;
@@ -333,51 +333,51 @@ display: block; height: 1px;
 font-size: 80%; color: #666;
 }
 .reply label span {
-font-size: 125%; 
+font-size: 125%;
 }
 label, label input {
 vertical-align: middle;
 }
 a.loading {
-	padding-left: 16px;
-	background: url('images/loading.gif') no-repeat left center;
+  padding-left: 16px;
+  background: url('images/loading.gif') no-repeat left center;
 }
 .x_unfoldreply td {
-	border-color: #EEAA88;
+  border-color: #EEAA88;
 }
 .x_qrattached:hover {
-	border-bottom: 1px #ccc dotted;
+  border-bottom: 1px #ccc dotted;
 }
 div a.show-hide-thread {
-	display: block; float: right; font-size: 70%; text-decoration: none;
+  display: block; float: right; font-size: 70%; text-decoration: none;
 }
 div a.show-hide-thread:hover {
-	text-decoration: underline; color: #f33;
+  text-decoration: underline; color: #f33;
 }
 #x_replyform {
-	display: block; border: 1px #117743; solid; margin: 0 2px 2px 2px; padding: 5px; 
-	background-color: #D6DAF0;
+  display: block; border: 1px #117743; solid; margin: 0 2px 2px 2px; padding: 5px;
+  background-color: #D6DAF0;
 }
 #x_replyform textarea {
-	width: 100%; border: 1px #EEAA88; solid;
+  width: 100%; border: 1px #EEAA88; solid;
 }
 #x_replyform div {
-	overflow: hidden; margin-top: 5px;
+  overflow: hidden; margin-top: 5px;
 }
 #x_replyform label {
-	float: left; margin-right: 10px;
+  float: left; margin-right: 10px;
 }
 #x_replyform input[type="text"], #x_replyform input[type="password"] {
-	border: 1px #EEAA88; solid;
+  border: 1px #EEAA88; solid;
 }
 #x_replyform input[type="file"] > input[type="text"] {
-	border: 1px #EEAA88; solid;
-} 
+  border: 1px #EEAA88; solid;
+}
 #x_replyform input[type="submit"] {
 
 }
 #x_replyform button {
-	
+
 }
 .logline {background: #DDDDDD;}
 .nomargin{margin: 0;}
@@ -401,8 +401,7 @@ background: #A8A8A8;
 #x_replyform_password_input{margin: 0px 4px 0px 0px; width: 70px}
 
 .img_loading{
-    margin-top: 15px;
-    margin-left: -120px;
+    position:absolute;
     z-index: 10;
     background:background:#D6DAF0;
     border: 2px dashed #34345C;
