--- a/fc/public/css/futaba.css
+++ b/fc/public/css/futaba.css
@@ -1,17 +1,17 @@
 ﻿body { margin: 0; padding: 8px; margin-bottom: auto; }
 blockquote blockquote { margin-left: 0em }
-form { 
+form {
 margin-bottom: 0px }
 .postarea { text-align: center }
 .postarea table { margin: 0px auto; text-align: left }
-.thumb { 
+.thumb {
 border: none; float: left; margin: 2px 20px }
-.nothumb { float: left; background: #eee; border: 2px dashed #aaa; 
+.nothumb { float: left; background: #eee; border: 2px dashed #aaa;
 text-align: center; margin: 2px 20px; padding: 1em 0.5em 1em 0.5em; }
-.reply blockquote, blockquote :last-child { 
+.reply blockquote, blockquote :last-child {
 margin-bottom: 0em }
 .reflink a { color: inherit; text-decoration: none }
-.reply .filesize { margin-left: 20px } 
+.reply .filesize { margin-left: 20px }
 .userdelete { float: right; text-align: center; white-space: nowrap }
 .replypage .replylink { display: none }
 html, body {
@@ -21,11 +21,11 @@ html, body {
 a {
         color:#0000EE;
 }
-	a:hover {
+  a:hover {
           color:#DD0000;
 
 }
-div.delete { 
+div.delete {
 }
 .adminbar {
         text-align:right;
@@ -62,61 +62,61 @@ div.delete {
         text-align:center;
         font-size:12px;
         font-family:serif;
-	clear: both;
-	padding-top: 10px;
+  clear: both;
+  padding-top: 10px;
 }
 .dellist {
-	font-weight: bold;
-	text-align:center;
+  font-weight: bold;
+  text-align:center;
 }
 .delbuttons {
-	text-align:center;
-	padding-bottom:4px;
+  text-align:center;
+  padding-bottom:4px;
 }
 .managehead {
-	background:#AAAA66;
-	color:#400000;
-	padding:0px;
+  background:#AAAA66;
+  color:#400000;
+  padding:0px;
 }
 .postlists {
-	background:#FFFFFF;
-	width:100%;
-	padding:0px;
-	color:#800000;
+  background:#FFFFFF;
+  width:100%;
+  padding:0px;
+  color:#800000;
 }
 .row1 {
-	background:#EEEECC;
-	color:#800000;
+  background:#EEEECC;
+  color:#800000;
 }
 .row2 {
        background:#DDDDAA;
         color:#800000;
 }
 .unkfunc {
-	background:inert;
-	color:#789922;
+  background:inert;
+  color:#789922;
 }
 .reflink {
 }
 .filesize {
-	text-decoration:none;
+  text-decoration:none;
 }
 .filetitle {
-	background:inherit;
-	font-size:1.2em;
-	color:#CC1105;
-	font-weight:800;
+  background:inherit;
+  font-size:1.2em;
+  color:#CC1105;
+  font-weight:800;
 }
 .postername {
-	/*
-	color:#117743;
-	font-weight:bold;
-	*/
+  /*
+  color:#117743;
+  font-weight:bold;
+  */
 }
 .postertrip {
-	/*
-	color:#228854;
-	*/
+  /*
+  color:#228854;
+  */
 }
 .oldpost, .notabene {
         color:#CC1105;
@@ -126,75 +126,75 @@ div.delete {
         color:#707070;
 }
 .reply {
-	background:#F0E0D6;
-	color:#800000;
+  background:#F0E0D6;
+  color:#800000;
 }
 blockquote {
-	margin: .5em .5em .5em 1em;
+  margin: .5em .5em .5em 1em;
 }
 
 .reply blockquote {
-	margin: .5em;
+  margin: .5em;
 }
 .doubledash {
- 	vertical-align:top;
-	clear:both;
-	float:left;
+   vertical-align:top;
+  clear:both;
+  float:left;
 }
 .replytitle {
-	font-size: 1.2em;
+  font-size: 1.2em;
         color:#CC1105;
         font-weight:800;
 }
 .commentpostername {
-	/*
+  /*
         color:#117743;
-	font-weight:800;
+  font-weight:800;
 */
 }
 .thumbnailmsg {
-	font-size: small;
-	color:#800000;
+  font-size: small;
+  color:#800000;
 }
 hr {
-	border-style: solid none none none;
-	border-width: 1px;
-	border-color: #BBBBBB;
+  border-style: solid none none none;
+  border-width: 1px;
+  border-color: #BBBBBB;
 }
 table {
-	border-style: none;
+  border-style: none;
 }
 table td {
-	border-style: none;
+  border-style: none;
 }
 .nothumb {
-	background-color: #FFFFFF;
-	border-style: dotted;
-	margin: .3em .5em;
+  background-color: #FFFFFF;
+  border-style: dotted;
+  margin: .3em .5em;
 }
 .abbrev {
         color:#707070;
 }
 .highlight {
-	background:#F0E0D6;
-	color:#800000;
-	border: 2px dashed #EEAA88;
+  background:#F0E0D6;
+  color:#800000;
+  border: 2px dashed #EEAA88;
 }
 dl.menu dt {
-	background:#DDDDDD;
-	border: solid 1px #CCCCCC;
-	margin-top: 1em;
-	padding-left: .5em;
-	cursor: pointer;
-	
+  background:#DDDDDD;
+  border: solid 1px #CCCCCC;
+  margin-top: 1em;
+  padding-left: .5em;
+  cursor: pointer;
+
 }
 dl.menu dd {
-	margin-left: .5em;
-	padding-left: .5em;
-	border-left: solid 1px #CCCCCC;
+  margin-left: .5em;
+  padding-left: .5em;
+  border-left: solid 1px #CCCCCC;
 }
 dl.menu dd.hidden {
-	display: none;
+  display: none;
 }
 .signature {
         background: #00FF00;
@@ -231,32 +231,32 @@ dl.menu dd.hidden {
         margin:0;
 }
 .spoiler {
-	background: #F0D0B6;
-	color: #F0D0B6;
+  background: #F0D0B6;
+  color: #F0D0B6;
 }
 .spoiler blockquote{
-	background: #B3E6B3 !important;
-	color: #B3E6B3 !important;
+  background: #B3E6B3 !important;
+  color: #B3E6B3 !important;
 }
 .spoiler:hover {
-	background: #F0D0B6;
-	color: #800000;
+  background: #F0D0B6;
+  color: #800000;
 }
 .spoiler:hover blockquote{
-	color:#789922 !important;
+  color:#789922 !important;
 }
 .spoiler blockquote:hover {
-	color:#789922 !important;
+  color:#789922 !important;
 }
 .errorMessage{
-	background:#EEaaaa;
-	text-align:center;
-	padding:2px;
-	color:#880000;
-	clear: both;
-	font-weight: bold;
-	margin-bottom: .5em;
-	border: solid 1px #117743;
+  background:#EEaaaa;
+  text-align:center;
+  padding:2px;
+  color:#880000;
+  clear: both;
+  font-weight: bold;
+  margin-bottom: .5em;
+  border: solid 1px #117743;
 }
 .adminMenu{
 vertical-align:top;
@@ -270,13 +270,13 @@ background:#F0E0D6;
 }
 
 .postername, .postertrip, .commentpostername {
-	display: inline; visibility: visible; font-weight: bold; color: #339;
+  display: inline; visibility: visible; font-weight: bold; color: #339;
 }
 .postertrip {
-	color: #993;
+  color: #993;
 }
 .hidden-thread {
-	color: #666; padding: 5px 0 0 28px; min-height: 24px; vertical-align: middle; background: url('images/hidden.png') no-repeat left center;
+  color: #666; padding: 5px 0 0 28px; min-height: 24px; vertical-align: middle; background: url('images/hidden.png') no-repeat left center;
 }
 form > div + br[clear="left"] {
 display: block; height: 1px;
@@ -285,53 +285,53 @@ display: block; height: 1px;
 font-size: 80%; color: #666;
 }
 .reply label span {
-font-size: 125%; 
+font-size: 125%;
 }
 label, label input {
 vertical-align: middle;
 }
 a.loading {
-	padding-left: 16px;
-	background: url('images/loading.gif') no-repeat left center;
+  padding-left: 16px;
+  background: url('images/loading.gif') no-repeat left center;
 }
 .x_unfoldreply td {
-	border-color: #EEAA88;
+  border-color: #EEAA88;
 }
 .x_qrattached:hover {
-	border-bottom: 1px #ccc dotted;
+  border-bottom: 1px #ccc dotted;
 }
 div a.show-hide-thread {
-	display: block; float: right; font-size: 70%; text-decoration: none;
+  display: block; float: right; font-size: 70%; text-decoration: none;
 }
 div a.show-hide-thread:hover {
-	text-decoration: underline; color: #f33;
+  text-decoration: underline; color: #f33;
 }
 #x_replyform {
-	display: block; border: 1px #117743; solid; margin: 0 2px 2px 2px; padding: 5px; 
-	background-color: #F0E0D6;
+  display: block; border: 1px #117743; solid; margin: 0 2px 2px 2px; padding: 5px;
+  background-color: #F0E0D6;
 ;
-; 
+;
 }
 #x_replyform textarea {
-	width: 100%; border: 1px #EEAA88; solid;
+  width: 100%; border: 1px #EEAA88; solid;
 }
 #x_replyform div {
-	overflow: hidden; margin-top: 5px;
+  overflow: hidden; margin-top: 5px;
 }
 #x_replyform label {
-	float: left; margin-right: 10px;
+  float: left; margin-right: 10px;
 }
 #x_replyform input[type="text"], #x_replyform input[type="password"] {
-	border: 1px #EEAA88; solid;
+  border: 1px #EEAA88; solid;
 }
 #x_replyform input[type="file"] > input[type="text"] {
-	border: 1px #EEAA88; solid;
-} 
+  border: 1px #EEAA88; solid;
+}
 #x_replyform input[type="submit"] {
 
 }
 #x_replyform button {
-	
+
 }
 .logline {background: #DDDDDD;}
 .nomargin{margin: 0;}
@@ -355,8 +355,7 @@ background: #A8A8A8;
 #x_replyform_password_input{margin: 0px 4px 0px 0px; width: 70px}
 
 .img_loading{
-    margin-top: 15px;
-    margin-left: -120px;
+    position:absolute;
     z-index: 10;
     background:#F0E0D6;
     color:#800000;
