totally valid xhtml transitional, templates reorganized, fixed #157
git-svn-id: svn://localhost/orphereus/trunk@887 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/fc/public/css/gurochan.css
+++ b/fc/public/css/gurochan.css
@@ -345,7 +345,7 @@ border: 1px solid #CA927B; background-color: #E6CBC0;
 }
 .logline {background: #DDDDDD;}
 .nomargin{margin: 0;}
-#smallFont{font-size: 70%;}
+.smallFont{font-size: 70%;}
 
 .hovblock
 {
