--- a/fc/public/css/kusaba.css
+++ b/fc/public/css/kusaba.css
@@ -387,7 +387,7 @@ div a.show-hide-thread:hover {
 }
 .logline {background: #DDDDDD;}
 .nomargin{margin: 0;}
-#smallFont{font-size: 70%;}
+.smallFont{font-size: 70%;}
 
 .hovblock
 {
