--- a/fc/public/css/bluemoon.css
+++ b/fc/public/css/bluemoon.css
@@ -415,7 +415,7 @@ div a.show-hide-thread:hover {
 }
 .logline {background: #DDDDDD;}
 .nomargin{margin: 0;}
-#smallFont{font-size: 70%;}
+.smallFont{font-size: 70%;}
 
 .hovblock
 {
