--- a/fc/public/css/photon.css
+++ b/fc/public/css/photon.css
@@ -375,5 +375,5 @@ background: #A8A8A8;
     background:#EEDACB;
     color:#333333;
     border: 2px dashed #EE6600;
-    vertical-align: center;
+    vertical-align: middle;
 }
