--- a/fc/public/css/photon.css
+++ b/fc/public/css/photon.css
@@ -375,5 +375,6 @@ background: #A8A8A8;
     background:#EEDACB;
     color:#333333;
     border: 2px dashed #EE6600;
-    margin-top: 2px;
 }
+
+.img_loading img{ margin-top: 4px}
