--- a/fc/public/css/burichan.css
+++ b/fc/public/css/burichan.css
@@ -406,3 +406,5 @@ background: #A8A8A8;
     background:background:#D6DAF0;
     border: 2px dashed #34345C;
 }
+
+.img_loading img{ margin-top: 4px}
