--- a/fc/public/css/photon.css
+++ b/fc/public/css/photon.css
@@ -377,4 +377,8 @@ background: #A8A8A8;
     border: 2px dashed #EE6600;
 }
 
-.img_loading img{ margin-top: 4px}
+.img_loading img{
+/*margin-top: 4px*/
+vertical-align: bottom;
+border: none;
+}
