--- a/fc/public/css/photon.css
+++ b/fc/public/css/photon.css
@@ -378,7 +378,8 @@ background: #A8A8A8;
 }
 
 .img_loading img{
-/*margin-top: 4px*/
-vertical-align: bottom;
+margin-top: -2px;
+margin-right: 8px;
+vertical-align: middle;
 border: none;
 }
