--- a/fc/public/css/bluemoon.css
+++ b/fc/public/css/bluemoon.css
@@ -443,4 +443,9 @@ background: #A8A8A8;
     -moz-border-radius: 6px;
 }
 
-.img_loading img{ margin-top: 4px}
+.img_loading img{
+margin-top: -2px;
+margin-right: 8px;
+vertical-align: middle;
+border: none;
+}
