--- a/fc/public/css/burichan.css
+++ b/fc/public/css/burichan.css
@@ -407,4 +407,9 @@ background: #A8A8A8;
     border: 2px dashed #34345C;
 }
 
-.img_loading img{ margin-top: 4px}
+.img_loading img{
+margin-top: -2px;
+margin-right: 8px;
+vertical-align: middle;
+border: none;
+}
