--- a/fc/public/css/futaba.css
+++ b/fc/public/css/futaba.css
@@ -362,4 +362,9 @@ background: #A8A8A8;
     border: 2px dashed #EEAA88;
 }
 
-.img_loading img{ margin-top: 4px}
+.img_loading img{
+margin-top: -2px;
+margin-right: 8px;
+vertical-align: middle;
+border: none;
+}
