--- a/fc/public/css/kusaba.css
+++ b/fc/public/css/kusaba.css
@@ -413,4 +413,9 @@ background: #A8A8A8;
     border: 2px dashed #117743;
 }
 
-.img_loading img{ margin-top: 4px}
+.img_loading img{
+margin-top: -2px;
+margin-right: 8px;
+vertical-align: middle;
+border: none;
+}
