--- a/fc/public/css/photon_blue.css
+++ b/fc/public/css/photon_blue.css
@@ -376,4 +376,9 @@ background: #A8A8A8;
     border: 2px dashed #EE6600;
 }
 
-.img_loading img{ margin-top: 4px}
+.img_loading img{
+margin-top: -2px;
+margin-right: 8px;
+vertical-align: middle;
+border: none;
+}
