--- a/fc/public/css/bluemoon.css
+++ b/fc/public/css/bluemoon.css
@@ -449,3 +449,8 @@ margin-right: 8px;
 vertical-align: middle;
 border: none;
 }
+
+.comment_loading_img{
+border: none;
+vertical-align: bottom;
+}
