--- a/fc/public/css/burichan.css
+++ b/fc/public/css/burichan.css
@@ -413,3 +413,8 @@ margin-right: 8px;
 vertical-align: middle;
 border: none;
 }
+
+.comment_loading_img{
+border: none;
+vertical-align: bottom;
+}
