--- a/fc/public/css/gurochan.css
+++ b/fc/public/css/gurochan.css
@@ -387,3 +387,103 @@ vertical-align: baseline;
 .popup_loading_img{
 border: none;
 }
+/* Y reply form*/
+#y_replyform {
+    display: block; border: 1px #ccc solid; margin: 0 2px 2px 2px; padding: 5px;
+    background-color: #ddd; -moz-border-radius: 5px;
+    float: left; width: 98%;
+}
+.y_replyform{
+    overflow: hidden;
+    display: none;
+}
+.y_replyform .clear{
+    clear: both;
+}
+#y_replyform textarea {
+    width: 99%; border: 1px #888 solid;
+}
+#y_replyform div.hidden {
+    margin: 0;
+    padding: 0;
+}
+#y_replyform div {
+    overflow: hidden; margin-top: 5px;
+}
+#y_replyform div.y_replyform_fields{
+    position: relative;
+}
+#y_replyform p {
+    float: left;
+    margin: 0;
+    padding-right: 1em;
+    vertical-align: middle
+}
+.y_replyform_anon .y_replyform_fields p{
+    line-height: 40px;
+    height: 40px;
+    min-height: 2.5em;
+}
+#y_replyform_password, #y_replyform_captcha{
+    display: none;
+}
+.y_replyform_anon #y_replyform_password, .y_replyform_anon #y_replyform_captcha{
+    display: block;
+}
+#y_replyform_captcha img{
+    display: block;
+    padding-right: 110px;
+}
+#y_replyform_captcha{
+    position: relative;
+}
+#y_replyform_captcha input{
+    width: 100px;
+    min-width: 15ex;
+    position: absolute;
+    top: 0;
+    left: 155px;
+}
+#y_replyform_captcha input.inactive{
+    font-style: italic;
+    color: #666;
+}
+#y_replyform_captcha input.valid{
+    background: #cfc;
+}
+#y_replyform_captcha input.invalid{
+    background: #f55;
+}
+input#y_replyform_password{
+            position: absolute;
+            left: 155px;
+            bottom: 0;
+            top: auto;
+            vertical-align: top;
+            height: 1em;
+}
+#y_replyform_sage label{
+}
+#y_replyform_goto select{
+    width: 100px;
+}
+#y_replyform label{
+}
+#y_replyform input[type="text"], #y_replyform input[type="password"] {
+    border: 1px #888 solid;
+}
+#y_replyform_buttons input{
+    border: 1px #666 solid; margin-left: 10px;
+}
+ #y_replyform_file input{
+    margin-top: 2px;
+}
+#y_replyform_buttons input{
+    margin-top: 3px;
+}
+.y_replyform_anon #y_replyform_file input{
+    margin-top: 10px;
+}
+.y_replyform_anon #y_replyform_buttons input{
+    margin-top: 12px;
+}
