--- a/fc/public/css/burichan.css
+++ b/fc/public/css/burichan.css
@@ -264,6 +264,17 @@ dl.menu dd.hidden {
         color: #330000;
 }
 
+.nonsignature {
+background: #ffe66f;
+color: #7a5a0c;
+}
+.nonsignature a {
+        color: #957220;
+}
+.nonsignature a:hover {
+        color: #4d3a0d;
+}
+
 .postbody blockquote {
   background:#C4C2EE;
   color:#FFFFFF;
@@ -354,31 +365,7 @@ div a.show-hide-thread {
 div a.show-hide-thread:hover {
   text-decoration: underline; color: #f33;
 }
-#x_replyform {
-  display: block; border: 1px #117743; solid; margin: 0 2px 2px 2px; padding: 5px;
-  background-color: #D6DAF0;
-}
-#x_replyform textarea {
-  width: 100%; border: 1px #EEAA88; solid;
-}
-#x_replyform div {
-  overflow: hidden; margin-top: 5px;
-}
-#x_replyform label {
-  float: left; margin-right: 10px;
-}
-#x_replyform input[type="text"], #x_replyform input[type="password"] {
-  border: 1px #EEAA88; solid;
-}
-#x_replyform input[type="file"] > input[type="text"] {
-  border: 1px #EEAA88; solid;
-}
-#x_replyform input[type="submit"] {
 
-}
-#x_replyform button {
-
-}
 .logline {background: #DDDDDD;}
 .nomargin{margin: 0;}
 .smallFont{font-size: 70%;}
@@ -395,10 +382,6 @@ div a.show-hide-thread:hover {
 .postInfo{
 background: #A8A8A8;
 }
-
-#x_replyform_goto{margin: 0px 4px 0px 4px; width: 120px}
-#x_replyform_captcha_input{margin: 0px 4px 0px 4px; width: 70px}
-#x_replyform_password_input{margin: 0px 4px 0px 0px; width: 70px}
 
 .img_loading{
     position:absolute;
@@ -524,3 +507,35 @@ input#y_replyform_password{
 .y_replyform_anon #y_replyform_buttons input{
     margin-top: 12px;
 }
+
+/*
+#x_replyform {
+  display: block; border: 1px #117743; solid; margin: 0 2px 2px 2px; padding: 5px;
+  background-color: #D6DAF0;
+}
+#x_replyform textarea {
+  width: 100%; border: 1px #EEAA88; solid;
+}
+#x_replyform div {
+  overflow: hidden; margin-top: 5px;
+}
+#x_replyform label {
+  float: left; margin-right: 10px;
+}
+#x_replyform input[type="text"], #x_replyform input[type="password"] {
+  border: 1px #EEAA88; solid;
+}
+#x_replyform input[type="file"] > input[type="text"] {
+  border: 1px #EEAA88; solid;
+}
+#x_replyform input[type="submit"] {
+
+}
+#x_replyform button {
+
+}
+
+#x_replyform_goto{margin: 0px 4px 0px 4px; width: 120px}
+#x_replyform_captcha_input{margin: 0px 4px 0px 4px; width: 70px}
+#x_replyform_password_input{margin: 0px 4px 0px 0px; width: 70px}
+*/
