--- a/fc/public/css/gurochan.css
+++ b/fc/public/css/gurochan.css
@@ -471,6 +471,10 @@ input#y_replyform_password{
     margin-top: 12px;
 }
 
+.omittedposts.expanded span{
+  display: none
+}
+
 /*
 #x_replyform {
   display: block; border: 1px solid #CA927B; margin: 0 2px 2px 2px; padding: 5px;
