--- a/fc/public/css/photon.css
+++ b/fc/public/css/photon.css
@@ -475,6 +475,10 @@ input#y_replyform_password{
 .y_replyform_anon #y_replyform_buttons input{
     margin-top: 12px;
 }
+
+.omittedposts.expanded span{
+  display: none
+}
 /*
 #x_replyform {
     display: block; border: 1px #ccc solid; margin: 0 2px 2px 2px; padding: 5px;
