--- a/fc/public/css/futaba.css
+++ b/fc/public/css/futaba.css
@@ -464,6 +464,13 @@ input#y_replyform_password{
   display: none
 }
 
+.omittedposts img{
+border: none;
+vertical-align: baseline;
+}
+
+a img{ border: 0}
+
 /*
 #x_replyform {
   display: block;
