--- a/fc/public/css/photon.css
+++ b/fc/public/css/photon.css
@@ -479,6 +479,14 @@ input#y_replyform_password{
 .omittedposts.expanded span{
   display: none
 }
+
+.omittedposts img{
+border: none;
+vertical-align: baseline;
+}
+
+a img{ border: 0}
+
 /*
 #x_replyform {
     display: block; border: 1px #ccc solid; margin: 0 2px 2px 2px; padding: 5px;
