--- a/fc/public/css/photon.css
+++ b/fc/public/css/photon.css
@@ -334,7 +334,7 @@ div a.show-hide-thread:hover {
     text-decoration: underline; color: #f33;
 }
 .logline {background: #DDDDDD;}
-.nomargin{margin: 0;}
+.nomargin{margin: 0; padding: 0 0 0 20px;} 
 .smallFont{font-size: 70%;}
 
 .hovblock
