--- a/fc/public/css/photon.css
+++ b/fc/public/css/photon.css
@@ -487,6 +487,44 @@ vertical-align: baseline;
 
 a img{ border: 0}
 
+.category {
+        font-family: sans-serif;
+        font-size: small;
+        margin-bottom: 8px;
+        background: #DDDDDD;
+}
+
+.header {
+        background: #CCCCCC;
+        color: #2266AA;
+        padding: 0px 3px 0px 3px;
+        font-weight: bold;
+        border-left: 1px solid #777777;
+        border-right: 1px solid #777777;
+        border-top: 1px solid #777777;
+}
+
+
+.list {
+        border-left: 1px solid #777777;
+        border-right: 1px solid #777777;
+        border-bottom: 1px solid #777777;
+}
+
+.list div a {
+        display: block;
+        text-decoration: none;
+        color: #FF6600;
+        padding: 0px 3px 0px 3px;
+}
+
+.list div a:hover {
+    color: #0066FF;
+    background: #EEEEEE;
+}
+
+
+
 /*
 #x_replyform {
     display: block; border: 1px #ccc solid; margin: 0 2px 2px 2px; padding: 5px;
