--- a/fc/public/css/bluemoon.css
+++ b/fc/public/css/bluemoon.css
@@ -380,7 +380,7 @@ div a.show-hide-thread:hover {
 }
 
 .logline {background: #DDDDDD;}
-.nomargin{margin: 0; padding: 0 0 0 20px;} 
+.nomargin{margin: 0; padding: 0 0 0 20px;}
 .smallFont{font-size: 70%;}
 
 .hovblock
@@ -533,6 +533,41 @@ vertical-align: baseline;
 
 a img{ border: 0}
 
+.category {
+        font-family: sans-serif;
+        font-size: small;
+        margin-bottom: 8px;
+        background: #49525D;
+}
+
+.header {
+        background: #39424D;
+        color: #FFFFFF;
+        padding: 0px 3px 0px 3px;
+        font-weight: bold;
+        border-left: 1px solid #49525D;
+        border-right: 1px solid #49525D;
+        border-top: 1px solid #49525D;
+}
+
+
+.list {
+        border-left: 1px solid #49525D;
+        border-right: 1px solid #49525D;
+        border-bottom: 1px solid #49525D;
+}
+
+.list div a {
+        display: block;
+        text-decoration: none;
+        color: #AFB9C5;
+        padding: 0px 3px 0px 3px;
+}
+
+.list div a:hover {
+    color: #0066FF;
+    background: #EEEEEE;
+}
 /*
 #x_replyform {
     display: block; border: 1px #117743; solid; margin: 0 2px 2px 2px; padding: 5px;
