--- a/fc/public/css/photon_blue.css
+++ b/fc/public/css/photon_blue.css
@@ -335,7 +335,7 @@ div a.show-hide-thread:hover {
 }
 
 .logline {background: #DDDDDD;}
-.nomargin{margin: 0; padding: 0 0 0 20px;} 
+.nomargin{margin: 0; padding: 0 0 0 20px;}
 .smallFont{font-size: 70%;}
 
 .hovblock
@@ -487,6 +487,41 @@ vertical-align: baseline;
 
 a img{ border: 0}
 
+.category {
+        font-family: sans-serif;
+        font-size: small;
+        margin-bottom: 8px;
+        background: #DDDDDD;
+}
+
+.header {
+        background: #CCCCCC;
+        color: #2266AA;
+        padding: 0px 3px 0px 3px;
+        font-weight: bold;
+        border-left: 1px solid #777777;
+        border-right: 1px solid #777777;
+        border-top: 1px solid #777777;
+}
+
+
+.list {
+        border-left: 1px solid #777777;
+        border-right: 1px solid #777777;
+        border-bottom: 1px solid #777777;
+}
+
+.list div a {
+        display: block;
+        text-decoration: none;
+        color: #044983;
+        padding: 0px 3px 0px 3px;
+}
+
+.list div a:hover {
+    color: #0066FF;
+    background: #EEEEEE;
+}
 /*
 
 #x_replyform {
