--- a/fc/public/css/kusaba.css
+++ b/fc/public/css/kusaba.css
@@ -174,6 +174,17 @@ div.delete {
     color:#000000;
     font-family:serif;
 }
+.myreply
+{
+    background:#CAF0D6;
+}
+
+.mythread
+{
+    border-left: dashed 2px #00E010;
+    padding-left: 2px;
+}
+
 blockquote {
     margin: .5em .5em .5em 1em;
 }
