--- a/fc/public/css/photon_blue.css
+++ b/fc/public/css/photon_blue.css
@@ -142,6 +142,18 @@ div.delete {
     margin: 0;
     -moz-border-radius: 5px;
 }
+
+.myreply
+{
+    background:#d1d1d1;
+}
+
+.mythread
+{
+    border-left: dashed 2px #AAAAAA;
+    padding-left: 2px;
+}
+
 blockquote {
     margin: .5em .5em .5em 1em;
 }
