0chan-styled menu, ui && js fixes. fixed #512

--- a/Orphereus/public/css/bluemoon.css
+++ b/Orphereus/public/css/bluemoon.css
@@ -30,6 +30,7 @@ body {
 
 a {
     color:#AFB9C5;
+    
 
 }
 /*a:visited {
@@ -344,7 +345,7 @@ color: #8D9DAF;
 }
 .adminMenu{
 vertical-align:top;
-background:#D6DAF0;
+background:#8689A0;
 }
 
 .hlTable td{
